[package]
name = "ethabi-cli"
version = "14.1.0"
authors = [
    "Parity Technologies <admin@parity.io>",
    "Artem Vorotnikov <artem@vorotnikov.me>",
    "Nicholas Rodrigues Lordello <nlordell@gmail.com>",
]
homepage = "https://github.com/rust-ethereum/ethabi"
keywords = ["ethereum", "eth", "abi", "solidity", "cli"]
description = "Easy to use cli for conversion of ethereum contract calls to bytecode."
license = "Apache-2.0"
edition = "2018"

[dependencies]
anyhow = "1"
ethabi = { version = "14.1.0", path = "../ethabi" }
hex = "0.4"
sha3 = "0.9"
structopt = "0.3"
itertools = "0.10"

[[bin]]
name = "ethabi"
path = "src/main.rs"
