[package]
name = "ethabi-contract"
version = "8.0.1"
authors = ["Parity Technologies <admin@parity.io>"]
homepage = "https://github.com/paritytech/ethabi"
license = "MIT/Apache-2.0"
keywords = ["ethereum", "eth", "abi", "solidity", "derive"]
description = "Easy to use conversion of ethereum contract calls to bytecode."
