[package]
name = "ethabi-derive"
version = "9.0.0"
authors = ["Parity Technologies <admin@parity.io>"]
homepage = "https://github.com/paritytech/ethabi"
license = "MIT/Apache-2.0"
keywords = ["ethereum", "eth", "abi", "solidity", "derive"]
description = "Easy to use conversion of ethereum contract calls to bytecode."

[lib]
proc-macro = true

[dependencies]
ethabi = { path = "../ethabi", version = "9.0.0" }
heck = "0.3"
syn = "0.15"
quote = "0.6"
proc-macro2 = "0.4"
