[package]
name = "ethabi-derive"
version = "14.1.0"
authors = ["Parity Technologies <admin@parity.io>"]
homepage = "https://github.com/paritytech/ethabi"
license = "Apache-2.0"
keywords = ["ethereum", "eth", "abi", "solidity", "derive"]
description = "Easy to use conversion of ethereum contract calls to bytecode."
edition = "2018"

[lib]
proc-macro = true

[dependencies]
anyhow = "1"
ethabi = { path = "../ethabi", version = "14.1.0" }
heck = "0.3.1"
syn = { version = "1.0.13", default-features = false, features = ["derive", "parsing", "printing", "proc-macro"] }
quote = "1.0.2"
proc-macro2 = "1.0.7"
