[package]
name = "ethabi"
version = "16.0.0"
authors = [
    "Parity Technologies <admin@parity.io>",
    "Artem Vorotnikov <artem@vorotnikov.me>",
    "Nicholas Rodrigues Lordello <nlordell@gmail.com>",
]
homepage = "https://github.com/rust-ethereum/ethabi"
license = "Apache-2.0"
keywords = ["ethereum", "eth", "abi", "solidity"]
description = "Easy to use conversion of ethereum contract calls to bytecode."
edition = "2018"

[dependencies]
hex = { version = "0.4", default-features = false, features = ["alloc"] }
serde = { version = "1.0", optional =  true, features = ["derive"] }
serde_json = { version = "1.0", optional = true }
sha3 = { version = "0.9", default-features = false }
ethereum-types = { version = "0.13.1", default-features = false }
thiserror = { version = "1", optional = true }
uint = { version = "0.9.0", optional = true }
regex = { version = "1.5.4", optional = true }
once_cell = { version = "1.9.0", optional = true }

[dev-dependencies]
hex-literal = "0.3"
paste = "1"

[features]
default = [
	"std",
	"full-serde",
	"rlp",
]
std = [
	"hex/std",
	"sha3/std",
	"ethereum-types/std",
	"thiserror",
	"uint/std",
]

# To enable custom `Reader`/`Tokenizer` and `serde` features support
full-serde = [
	"std",
	"serde",
	"serde_json",
	"uint",
	"ethereum-types/serialize",
	"regex",
	"once_cell"
]

rlp = [
	"ethereum-types/rlp",
]

parity-codec = [
	"ethereum-types/codec"
]
